MIJN-5120 - Remove ownertype (#54)
* fix: remove ownertype

* fix: add null check

* fix: use length check
